--- a/index.html
+++ b/index.html
@@ -79,17 +79,22 @@
       color: #e8f6f4;
     }
     .notify form {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
       gap: 10px;
       align-items: center;
+      max-width: 560px;
     }
-    .notify input[type="email"] {
-      flex: 1 1 260px;
+    .notify input[type="text"],
+    .notify input[type="email"],
+    .notify textarea {
+      width: 100%;
       padding: 14px 12px;
       border: 1px solid #0a4f49;
       border-radius: 6px;
       font-size: 1rem;
+      font-family: inherit;
+      resize: vertical;
+      min-height: 48px;
     }
     .notify button {
       padding: 14px 20px;
@@ -136,9 +141,16 @@
   <h2>Get notified when we launch</h2>
   <p>Drop your email and we will ping you the moment CarbonWise is available.</p>
   <form id="notify-form" data-endpoint="https://api.web3forms.com/submit" novalidate>
+    <label for="name" class="sr-only">Name</label>
+    <input type="text" id="name" name="name" placeholder="Your name" />
+
     <label for="email" class="sr-only">Email</label>
     <input type="hidden" name="access_key" value="b55e686b-10d4-4cef-b72a-dd3508e8528a" />
     <input type="email" id="email" name="email" placeholder="you@example.com" required />
+
+    <label for="message" class="sr-only">Message</label>
+    <textarea id="message" name="message" placeholder="Anything specific you need? (optional)"></textarea>
+
     <input type="text" name="company" style="position:absolute;left:-5000px;" tabindex="-1" aria-hidden="true" />
     <button type="submit">Notify me</button>
   </form>
