Rewrite hero messaging

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       max-width: 600px;
       margin: 0 auto 30px;
     }
+    .hero-note {
+      font-size: 1rem;
+      color: #0f766e;
+      margin-top: 12px;
+    }
     .btn {
       display: inline-block;
       padding: 14px 28px;
@@ -133,8 +138,10 @@
 
 <header>
   <h1>CarbonWise</h1>
-  <p>Carbon & ESG reporting, made simple. Upload your bills. We calculate your footprint and tell you what you need to report.</p>
+  <p>Carbon & ESG reporting, made simple.</p>
+  <p>Upload your utility bills. We calculate your carbon footprint and tell you exactly what you are required to report.</p>
   <a href="#" class="btn">Get Started</a>
+  <div class="hero-note">Free Scope 2 estimate • No ESG expertise required</div>
 </header>
 
 <section class="notify">
